wrap query_params
